# bifrost

./: .gitignore  Dockerfile  KPI.md  README.md  bifrost.db  docker-compose.yml  pyproject.toml  requirements.txt  tasks.md
app/: collector.py  dependencies.py  main.py
app/account/: auth.py
app/api/: __init__.py  config.py  request.py  schedules.py
app/api/routers/: routers_auth.py  sources.py
app/config/: config.db  models.py  shemas.py
app/core/: database.py
app/database/: database.py  models.py  schemas.py
app/models/: models.py
app/routers/: connectors.py  meta.py  routers_auth.py  sources.py  state.py
app/schemas/: auth.py  schemas.py
app/services/: executor.py  services.py
app/storage/: minio_client.py
app/storage/config/: config.py
cli/: main.py
frontend/: README.md  app.js  index.html  next.config.js  package-lock.json  script.js  style.css  tailwind.config.ts
frontend/app/: app.js  index.html  router.js  tailwind_config.js
frontend/app/components/: overview.js  planning.js  sources.js
frontend/landing/: index.html  script.js  style.css
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/planning/: page.tsx
frontend/src/components/dashboard/: DashboardHeader.tsx  SourceForm.tsx
frontend_landing_page/: next.config.js  package.json
frontend_landing_page/.next/types/app/: layout.ts  page.ts
frontend_landing_page/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend_landing_page/src/components/: AuroraBackground.tsx
(+3 files in other folders)
